fix about nav item not showing, fix css property to hide white space

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -122,10 +122,6 @@
 }
 
 @layer base {
-  * {
-    @apply border-border outline-ring/50;
-  }
-
   body {
     @apply bg-background text-foreground;
   }
@@ -186,33 +182,21 @@
   }
 }
 
-html {
-  font-size: var(--font-size);
-  overflow-x: hidden;
-  max-width: 100vw;
-}
-
-body {
-  overflow-x: hidden;
-  max-width: 100vw;
-}
-
 /* Hide scrollbar for Chrome, Safari and Opera */
 ::-webkit-scrollbar {
   display: none;
 }
 
-/* Hide scrollbar for IE, Edge and Firefox */
-body { /* Or any specific element */
+body {
   -ms-overflow-style: none;
   scrollbar-width: none;
+  overflow: auto;
 }
 
-/* Optional: Use scrollbar-gutter to prevent layout shifts */
-body { /* Or any specific element */
-  overflow: auto; /* Or overflow-x: auto; or overflow-y: auto; */
-  scrollbar-gutter: stable; /* Or scrollbar-gutter: both-edges; */
+@media (max-width: 639px) {
+  html, body {
+    overflow-x: hidden !important; /* Force no horizontal scroll */
+  }
 }
-
 
 
